Prevent info cutoff on narrow viewports
- Fix activity info being hidden on < 404 px wide
- Fix activity description in detail view being cut off by .panel-body rule
- Fix activity rendering way too wide on xs viewport

--- a/app/assets/stylesheets/members.css
+++ b/app/assets/stylesheets/members.css
@@ -18,7 +18,8 @@
  *= require_tree ./members
  */
 
-.panel-activity > .panel-body {
+.panel-activity > .panel-body:nth-child(2) {
   height: 230px;
   overflow: hidden;
+  display: flex;
 }
